# opendesk-client

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: install.md
opendesk/: app.py  host_app.py
opendesk/core/: _pipewire_helper.py  audio_manager.py  camera_manager.py  clipboard_sync.py  device_registry.py  file_transfer.py  input_injection.py  keyboard_state.py  platform_config.py  screen_capture.py  screen_recorder.py  video_codec.py  wayland_capture.py
opendesk/crypto/: auth.py  challenge.py
opendesk/network/: __init__.py  protocol.py  relay_client.py
opendesk/services/: connection_service.py  pipeline.py  stream_service.py
opendesk/ui/: chat_panel.py  connections.py  file_transfer_ui.py  main_window.py  session_info.py  settings_dialog.py  viewer.py
opendesk/ui/resources/: dark.qss  opendesk.qss
opendesk/ui/widgets/: __init__.py  empty_state_widget.py  health_status.py  status_badge.py  toast_notification.py
relay_server/: server.py
scripts/: install-relay.sh  opendesk-relay.service  restart-relay.sh
tests/: test_advanced.py  test_network.py  test_relay_integration.py  test_tile_grid_diagnostic.py  test_ui.py
