[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "opendesk"
version = "1.0.0"
description = "Remote desktop application (TeamViewer/AnyDesk-like)"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "OpenDesk Contributors"},
]
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Communications :: File Sharing",
    "Topic :: Internet",
    "Topic :: System :: Networking",
]

# ── Core dependencies ──────────────────────────────────────────────
# Platform-specific deps use environment markers so pip auto-selects
# the correct ones for the target OS.
dependencies = [
    "PySide6>=6.10.1",
    "Pillow>=10.2.0",
    "numpy>=2.4.4",
    "cryptography>=41.0.7",
    "PyNaCl>=1.5.0",
    "websockets>=10.4",
    "mss>=9.0.0",
    "opencv-python>=4.9.0",
    "av>=12.0.0",
    "aiortc>=1.9.0",
    "pyzmq>=26.0",
    "argon2-cffi>=23.1.0",
    "msgpack>=1.0.0",
    # Linux (X11 + Wayland input / keyboard state)
    "python-xlib>=0.33 ; sys_platform == 'linux'",
    "dbus-next>=0.2.3   ; sys_platform == 'linux'",
    "evdev>=1.9.3       ; sys_platform == 'linux'",
    # macOS (screen capture / input via CoreGraphics)
    "pyobjc-framework-Quartz>=9.0 ; sys_platform == 'darwin'",
]

[project.urls]
Homepage = "https://github.com/opendesk/opendesk-client"
Repository = "https://github.com/opendesk/opendesk-client"
Issues = "https://github.com/opendesk/opendesk-client/issues"

[project.optional-dependencies]
audio = [
    "soundcard>=0.4.6",
]
wayland = [
    "dbus-next>=0.2.3",
    "evdev>=1.9.3",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "black>=24.0",
    "ruff>=0.3.0",
    "mypy>=1.9.0",
]

[tool.setuptools.packages.find]
include = ["opendesk*"]

[tool.setuptools.package-data]
"*" = ["*.qss", "*.png", "*.svg", "*.ico"]


[tool.black]
line-length = 99
target-version = ["py312"]

[tool.ruff]
line-length = 99
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.12"
strict = false
ignore_missing_imports = true



[project.scripts]
opendesk = "opendesk.app:main"
opendesk-release = "opendesk.app:main_release"
opendesk-host = "opendesk.host_app:main_host"

